styling the new wrapper

--- a/styles.css
+++ b/styles.css
@@ -67,10 +67,10 @@ body {
 }
 
 
-some-page-wrapper {
+.description-wrapper {
   display: flex;
   margin: 15px;
-  background-color: red;
+  justify-content: space-between;
 }
 
 .row {
