--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ html {
 }
 .center {
   margin-left: 10%;
+  margin-bottom: 22%;
 }
 .footer {
   margin-top: 15%;
@@ -158,7 +159,7 @@ html {
   }
 
   .hero {
-    position: fixed;
+    position: absolute;
     bottom: 50%;
     top: 17%;
   }
